[package]
name = "my-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
http-body = "1.0.0"
hyper = { version = "1.2.0", features = ["full"] }
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
mime = "0.3.17"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
anyhow = "1.0.80"
thiserror = "1.0.57"
validator = { version = "0.17.0", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
] }
dotenv = "0.15.0"
